--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>Web Portfolio of Marco</title>
-  </head>
-  <body>
-    <h1>Web Portfolio of Marco</h1>
-    <p>Write anything you want to tell the world.</p>
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+
+    <title>Max Hort</title>
+</head>
+
+<body>
+
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="https://maxhort.github.io/">Max Hort</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#about">Home</a>
+                <a class="nav-item nav-link" href="#publications">Publications</a>
+                <a class="nav-item nav-link" href="#service">Service</a>
+            </div>
+        </div>
+    </nav>
+
+
+
+    <div class="container-fluid text-center"> 
+            <div class="row content">
+              <div class="col-sm-2 sidenav">
+                <img src="max.png" alt="Max" width="150">
+                <p><br>Solar, UCL
+                <br>London, United Kingdom
+                <br>Email: max.hort.19[at]ucl.ac.uk</p>
+                <a href="https://github.com/maxhort/">GitHub</a> &#8226;
+                <a href="https://www.linkedin.com/in/max-hort-40aa72140/">LinkedIn</a>
+              </div>
+              <div class="col-sm-8 text-left">
+                <h3 id="about">About</h3>
+                <p>I am a PhD Candidate at the <a href="http://crest.cs.ucl.ac.uk/"
+                    target="_blank">Centre for Research on Evolution, Search and Testing (CREST)
+                    </a> in the Department of Computer Science at <a
+                    href="https://www.ucl.ac.uk/" target="_blank">University College London
+                    (UCL)</a>. I am supervised by Dr. <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Federica Sarro</a> 
+                    and Professor <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/">Mark Harman</a>. 
+                </p>
+
+                <p>My research research interests focus on software engineering, specifically, non-functional
+                optimization of software.
+                </p>
+                <hr>
+                <h3 id="publications">Publications</h3>
+                <ol>
+                    <li>Optimising Word Embeddings With Search-Based Approaches [Bibtex] [pdf]</li>
+                </ol>
+                <h3 id="service">Service</h3>
+                <ul>
+                    <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
+                </ul> 
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
