--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="row content">
               <div class="col-sm-2 sidenav">
                 <img src="max.png" alt="Max" width="150">
-                <p><br><a href=“https://solar.cs.ucl.ac.uk”> SOLAR <\a>, UCL
+                <p><br><a href="https://solar.cs.ucl.ac.uk"> SOLAR <\a>, UCL
                 <br>London, United Kingdom
                 <br>Email: max.hort.19[at]ucl.ac.uk</p>
                 <a href="https://github.com/maxhort/">GitHub</a> &#8226;
