--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="row content">
               <div class="col-sm-2 sidenav">
                 <img src="max.png" alt="Max" width="150">
-                <p><br><a href="https://solar.cs.ucl.ac.uk"> SOLAR </a>, UCL
+                <p><br>Solar, UCL
                 <br>London, United Kingdom
                 <br>Email: max.hort.19[at]ucl.ac.uk</p>
                 <a href="https://github.com/maxhort/">GitHub</a> &#8226;
@@ -59,11 +59,16 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ol>
-                    <li>Optimising Word Embeddings With Search-Based Approaches [Bibtex] [pdf]</li>
+                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.pdf" download>[Bibtex]</a> <a href="http://www0.cs.ucl.ac.uk/staff/fsarro/resource/papers/GECCO20_OptimisingWordEmbeddings.pdf">[pdf]</a></li>
+                </ol>
+				<h3 id="publications">Master Thesis</h3>
+                <ol>
+                    <li>Using Deep Learning to Improve Proof-Number Search in Two-Player Board Games <a href = "/thesis.pdf" download>[pdf]</a></li>
                 </ol>
                 <h3 id="service">Service</h3>
                 <ul>
                     <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
+					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
                 </ul> 
                 </div>
               </div>
