--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ol>
-                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.pdf" download>[Bibtex]</a> <a href="http://www0.cs.ucl.ac.uk/staff/fsarro/resource/papers/GECCO20_OptimisingWordEmbeddings.pdf">[pdf]</a></li>
+                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="http://www0.cs.ucl.ac.uk/staff/fsarro/resource/papers/GECCO20_OptimisingWordEmbeddings.pdf">[pdf]</a></li>
                 </ol>
 				<h3 id="publications">Master Thesis</h3>
                 <ol>
