--- a/index.html
+++ b/index.html
@@ -53,22 +53,24 @@
                     and Professor <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/">Mark Harman</a>. 
                 </p>
 
-                <p>My research research interests focus on software engineering, specifically, non-functional
-                optimization of software.
+                <p>My research research interests lie on software fairness, non-functional optimization of software, and search-based software engineering. 
+				In particular, I focus on improving the fairness of machine learning models, such as binary classification and word embeddings.
                 </p>
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ol>
-                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="http://www0.cs.ucl.ac.uk/staff/fsarro/resource/papers/GECCO20_OptimisingWordEmbeddings.pdf">[pdf]</a></li>
+                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.pdf" download>[Bibtex]</a> <a href="http://www0.cs.ucl.ac.uk/staff/fsarro/resource/papers/GECCO20_OptimisingWordEmbeddings.pdf">[pdf]</a></li>
                 </ol>
 				<h3 id="publications">Master Thesis</h3>
-                <ul>
+                <ol>
                     <li>Using Deep Learning to Improve Proof-Number Search in Two-Player Board Games <a href = "/thesis.pdf" download>[pdf]</a></li>
-                </ul>
+                </ol>
                 <h3 id="service">Service</h3>
                 <ul>
                     <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
 					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
+					<li>Teaching Assistant COMP0066 Introduction to Programming</li>
+					<li>Teaching Assistant COMP0005 Algorithms</li>
                 </ul> 
                 </div>
               </div>
