--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     target="_blank">Centre for Research on Evolution, Search and Testing (CREST)
                     </a> in the Department of Computer Science at <a
                     href="https://www.ucl.ac.uk/" target="_blank">University College London
-                    (UCL)</a>. I am supervised by Dr. <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Federica Sarro</a> 
+                    (UCL)</a>. I am supervised by Professor <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Federica Sarro</a> 
                     and Professor <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/">Mark Harman</a>. 
                 </p>
 
