--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </ol>
 				<h3 id="publications">Master Thesis</h3>
                 <ol>
-                    <li>Using Deep Learning to Improve Proof-Number Search in Two-Player Board Games <a href = "/thesis.pdf" download>[pdf]</a></li>
+                    <li>Using Deep Learning to Improve Proof-Number Search in Two-Player Board Games <a href = "/thesis.pdf">[pdf]</a></li>
                 </ol>
                 <h3 id="service">Service</h3>
                 <ul>
