--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ol>
+					<li>A Survey of Performance Optimization for Mobile Applications <a href = "/bibtex/hort2021tse.txt" download>[Bibtex]</a> <a href="https://solar.cs.ucl.ac.uk/pdf/AppPerformanceOptimizationSurvey.pdf">[pdf]</a></li>
                     <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="http://www0.cs.ucl.ac.uk/staff/fsarro/resource/papers/GECCO20_OptimisingWordEmbeddings.pdf">[pdf]</a></li>
                 </ol>
 				<h3 id="publications">Master Thesis</h3>
@@ -68,7 +69,9 @@
                 <h3 id="service">Service</h3>
                 <ul>
                     <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
+					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a></li>
 					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
+					<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
 					<li>Teaching Assistant COMP0066 Introduction to Programming</li>
 					<li>Teaching Assistant COMP0005 Algorithms</li>
                 </ul> 
