--- a/index.html
+++ b/index.html
@@ -52,16 +52,21 @@
                     (UCL)</a>. I am supervised by Professor <a href="http://www0.cs.ucl.ac.uk/staff/F.Sarro/">Federica Sarro</a> 
                     and Professor <a href="http://www0.cs.ucl.ac.uk/staff/M.Harman/">Mark Harman</a>. 
                 </p>
+				
+				<!--<p>My research research interests lie on software fairness, non-functional optimization of software, and search-based software engineering. 
+				In particular, I focus on improving the fairness of machine learning models, such as binary classification and word embeddings.-->
 
-                <p>My research research interests lie on software fairness, non-functional optimization of software, and search-based software engineering. 
+                <p>My research interests lie on machine learning fairness, non-functional optimization, and search-based software engineering.
 				In particular, I focus on improving the fairness of machine learning models, such as binary classification and word embeddings.
                 </p>
                 <hr>
                 <h3 id="publications">Publications</h3>
-                <ol>
-					<li>A Survey of Performance Optimization for Mobile Applications <a href = "/bibtex/hort2021tse.txt" download>[Bibtex]</a> <a href="https://solar.cs.ucl.ac.uk/pdf/AppPerformanceOptimizationSurvey.pdf">[pdf]</a></li>
-                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="http://www0.cs.ucl.ac.uk/staff/fsarro/resource/papers/GECCO20_OptimisingWordEmbeddings.pdf">[pdf]</a></li>
-                </ol>
+                <ul>
+					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods <a href = "/bibtex/hort2021fairea.txt" download>[Bibtex]</a> <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
+					<li>The Effect of Offspring Population Size on NSGA-II: A Preliminary Study <a href = "/bibtex/hort2021nsga.txt" download>[Bibtex]</a> <a href="/publications/hort2021nsga.pdf">[pdf]</a></li>
+					<li>A Survey of Performance Optimization for Mobile Applications <a href = "/bibtex/hort2021tse.txt" download>[Bibtex]</a> <a href="/publications/hort2021tse.pdf">[pdf]</a></li>
+                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="/publications/hort2020optimising.pdf">[pdf]</a></li>
+                </ul>
 				<h3 id="publications">Master Thesis</h3>
                 <ol>
                     <li>Using Deep Learning to Improve Proof-Number Search in Two-Player Board Games <a href = "/thesis.pdf">[pdf]</a></li>
@@ -74,6 +79,7 @@
 					<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
 					<li>Teaching Assistant COMP0066 Introduction to Programming</li>
 					<li>Teaching Assistant COMP0005 Algorithms</li>
+					<li>Co-supervision of MSc student project</li>
                 </ul> 
                 </div>
               </div>
