--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ul>
-					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination (accepted at ASE2021 NIER track)</li>
+					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination (to appear at ASE2021 NIER)</li>
 					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods <a href = "/bibtex/hort2021fairea.txt" download>[Bibtex]</a> <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
 					<li>The Effect of Offspring Population Size on NSGA-II: A Preliminary Study <a href = "/bibtex/hort2021nsga.txt" download>[Bibtex]</a> <a href="/publications/hort2021nsga.pdf">[pdf]</a></li>
 					<li>A Survey of Performance Optimization for Mobile Applications <a href = "/bibtex/hort2021tse.txt" download>[Bibtex]</a> <a href="/publications/hort2021tse.pdf">[pdf]</a></li>
