--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <ul>
                     <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
 					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a></li>
+					<li>Co-reviewer for <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a></li>
 					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
 					<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
 					<li>Teaching Assistant COMP0066 Introduction to Programming</li>
