--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
                 </ol>
                 <h3 id="service">Service</h3>
                 <ul>
-                    <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
-					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a></li>
+					<li>Shadow PC for <a href="https://conf.researchr.org/home/msr-2022">MSR'22</a></li>
 					<li>Co-reviewer for <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a></li>
-					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
+					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a></li>
+                    <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
 					<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
+					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
 					<li>Teaching Assistant COMP0066 Introduction to Programming</li>
 					<li>Teaching Assistant COMP0005 Algorithms</li>
-					<li>Co-supervision of MSc student project</li>
+					<li>Co-supervision of MSc student projects (Fairness of Word Embeddings, Genetic Improvement for Python)</li>
                 </ul> 
                 </div>
               </div>
