--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ul>
+					<li>Privileged and Unprivileged Groups: An Empirical Study on the Impact of the Age Attribute on Fairness <a href = "/bibtex/hort2022fairware.txt" download>[Bibtex]</a> <a href="/publications/hort2022fairware.pdf">[pdf]</a></li>
 					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination <a href = "/bibtex/hort2021ase.txt" download>[Bibtex]</a> <a href="/publications/hort2021ase.pdf">[pdf]</a></li>
 					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods <a href = "/bibtex/hort2021fairea.txt" download>[Bibtex]</a> <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
 					<li>The Effect of Offspring Population Size on NSGA-II: A Preliminary Study <a href = "/bibtex/hort2021nsga.txt" download>[Bibtex]</a> <a href="/publications/hort2021nsga.pdf">[pdf]</a></li>
@@ -69,17 +70,19 @@
                     <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="/publications/hort2020optimising.pdf">[pdf]</a></li>
                 </ul>
 				<h3 id="publications">Master Thesis</h3>
-                <ol>
+                <ul>
                     <li>Using Deep Learning to Improve Proof-Number Search in Two-Player Board Games <a href = "/thesis.pdf">[pdf]</a></li>
-                </ol>
+                </ul>
                 <h3 id="service">Service</h3>
                 <ul>
 					<li>Shadow PC for <a href="https://conf.researchr.org/home/msr-2022">MSR'22</a></li>
+					<li>Co-reviewer for <a href="https://dl.acm.org/journal/tosem">TOSEM</a></li>
 					<li>Co-reviewer for <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a></li>
 					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a></li>
                     <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
 					<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
 					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
+					<li>Teaching Assistant COMP0137 Machine Vision</li>
 					<li>Teaching Assistant COMP0066 Introduction to Programming</li>
 					<li>Teaching Assistant COMP0005 Algorithms</li>
 					<li>Co-supervision of MSc student projects (Fairness of Word Embeddings, Genetic Improvement for Python)</li>
