--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ul>
+					<li>An Empirical Study on the Fairness of Pre-trained Word Embeddings <a href = "/bibtex/SesariGEBNLP22.txt" download>[Bibtex]</a> <a href="/publications/SesariGEBNLP22.pdf">[pdf]</a></li>
+					<li>Py2Cy: A Genetic Improvement Tool To Speed Up Python <a href = "/bibtex/ZhongGECCOGI22.txt" download>[Bibtex]</a> <a href="/publications/ZhongGECCOGI22.pdf">[pdf]</a></li>
 					<li>Privileged and Unprivileged Groups: An Empirical Study on the Impact of the Age Attribute on Fairness <a href = "/bibtex/hort2022fairware.txt" download>[Bibtex]</a> <a href="/publications/hort2022fairware.pdf">[pdf]</a></li>
 					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination <a href = "/bibtex/hort2021ase.txt" download>[Bibtex]</a> <a href="/publications/hort2021ase.pdf">[pdf]</a></li>
 					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods <a href = "/bibtex/hort2021fairea.txt" download>[Bibtex]</a> <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
@@ -76,9 +78,11 @@
                 <h3 id="service">Service</h3>
                 <ul>
 					<li>Shadow PC for <a href="https://conf.researchr.org/home/msr-2022">MSR'22</a></li>
+					<li>Co-reviewer for <a href="https://www.computer.org/csdl/journal/ts">TSE</a></li>
+					<li>Co-reviewer for <a href="https://conf.researchr.org/home/ase-2022">ASE'22</a></li>
 					<li>Co-reviewer for <a href="https://dl.acm.org/journal/tosem">TOSEM</a></li>
 					<li>Co-reviewer for <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a></li>
-					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a></li>
+					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a>, <a href="https://2022.esec-fse.org/">FSE'22</a></li>
                     <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
 					<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
 					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
