--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ul>
-					<li>An Empirical Study on the Fairness of Pre-trained Word Embeddings <a href = "/bibtex/SesariGEBNLP22.txt" download>[Bibtex]</a> <a href="/publications/SesariGEBNLP22.pdf">[pdf]</a></li>
-					<li>Py2Cy: A Genetic Improvement Tool To Speed Up Python <a href = "/bibtex/ZhongGECCOGI22.txt" download>[Bibtex]</a> <a href="/publications/ZhongGECCOGI22.pdf">[pdf]</a></li>
-					<li>Privileged and Unprivileged Groups: An Empirical Study on the Impact of the Age Attribute on Fairness <a href = "/bibtex/hort2022fairware.txt" download>[Bibtex]</a> <a href="/publications/hort2022fairware.pdf">[pdf]</a></li>
-					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination <a href = "/bibtex/hort2021ase.txt" download>[Bibtex]</a> <a href="/publications/hort2021ase.pdf">[pdf]</a></li>
-					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods <a href = "/bibtex/hort2021fairea.txt" download>[Bibtex]</a> <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
-					<li>The Effect of Offspring Population Size on NSGA-II: A Preliminary Study <a href = "/bibtex/hort2021nsga.txt" download>[Bibtex]</a> <a href="/publications/hort2021nsga.pdf">[pdf]</a></li>
-					<li>A Survey of Performance Optimization for Mobile Applications <a href = "/bibtex/hort2021tse.txt" download>[Bibtex]</a> <a href="/publications/hort2021tse.pdf">[pdf]</a></li>
-                    <li>Optimising Word Embeddings With Search-Based Approaches <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="/publications/hort2020optimising.pdf">[pdf]</a></li>
+					<li>An Empirical Study on the Fairness of Pre-trained Word Embeddings (GEBNLP'22) <a href = "/bibtex/SesariGEBNLP22.txt" download>[Bibtex]</a> <a href="/publications/SesariGEBNLP22.pdf">[pdf]</a></li>
+					<li>Py2Cy: A Genetic Improvement Tool To Speed Up Python (GI@GECCO'22) <a href = "/bibtex/ZhongGECCOGI22.txt" download>[Bibtex]</a> <a href="/publications/ZhongGECCOGI22.pdf">[pdf]</a></li>
+					<li>Privileged and Unprivileged Groups: An Empirical Study on the Impact of the Age Attribute on Fairness (Fairware'22) <a href = "/bibtex/hort2022fairware.txt" download>[Bibtex]</a> <a href="/publications/hort2022fairware.pdf">[pdf]</a></li>
+					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination (ASE'22) <a href = "/bibtex/hort2021ase.txt" download>[Bibtex]</a> <a href="/publications/hort2021ase.pdf">[pdf]</a></li>
+					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods (FSE'21) <a href = "/bibtex/hort2021fairea.txt" download>[Bibtex]</a> <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
+					<li>The Effect of Offspring Population Size on NSGA-II: A Preliminary Study (GECCO'21) <a href = "/bibtex/hort2021nsga.txt" download>[Bibtex]</a> <a href="/publications/hort2021nsga.pdf">[pdf]</a></li>
+					<li>A Survey of Performance Optimization for Mobile Applications (TSE'21) <a href = "/bibtex/hort2021tse.txt" download>[Bibtex]</a> <a href="/publications/hort2021tse.pdf">[pdf]</a></li>
+                    <li>Optimising Word Embeddings With Search-Based Approaches (GECCO'20) <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="/publications/hort2020optimising.pdf">[pdf]</a></li>
                 </ul>
 				<h3 id="publications">Master Thesis</h3>
                 <ul>
