--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
-<meta http-equiv='cache-control' content='no-cache'> 
-<meta http-equiv='expires' content='0'> 
-<meta http-equiv='pragma' content='no-cache'>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -39,7 +36,7 @@
     <div class="container-fluid text-center"> 
             <div class="row content">
               <div class="col-sm-2 sidenav">
-                <img src="max.png" alt="Max" width="150">
+                <img src="max2.jpg" alt="Max" width="150">
                 <p><br>Simula Research Laboratory
                 <br>Oslo, Norway
                 <br>Email: maxh[at]simula.no</p>
@@ -61,6 +58,9 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ul>
+					<li>An Exploratory Literature Study on Sharing and Energy Use of Language Models for Source Code (ESEM'23) <a href = "/bibtex/hort2023exploratory.txt" download>[Bibtex]</a> <a href="/publications/hort2023exploratory.pdf">[pdf]</a></li>
+					<li>The EarlyBIRD Catches the Bug: On Exploiting Early Layers of Encoder Models for More Efficient Code Classification (FSE'23) <a href = "/bibtex/grishina2023earlybird.txt" download>[Bibtex]</a> <a href="/publications/grishina2023earlybird.pdf">[pdf]</a></li>
+					<li>Multi-objective Search for Gender-Fair and Semantically Correct Word Embeddings HOP (GECCO'23) <a href = "/bibtex/hort2023hop.txt" download>[Bibtex]</a> <a href="/publications/hort2023hop.pdf">[pdf]</a></li>
 					<li>Multi-objective Search for Gender-Fair and Semantically Correct Word Embeddings (Appl.SoftComput.'23) <a href = "/bibtex/hort2023multi.txt" download>[Bibtex]</a> <a href="/publications/hort2023multi.pdf">[pdf]</a></li>
 					<li>Bias Mitigation for Machine Learning Classifiers: A Comprehensive Survey (arXiv'22) <a href = "/bibtex/hort2022bias.txt" download>[Bibtex]</a> <a href="/publications/hort2022bias.pdf">[pdf]</a></li>
 					<li>Fairness Testing: A Comprehensive Survey and Analysis of Trends (arXiv'22) <a href = "/bibtex/chen2022fairness.txt" download>[Bibtex]</a> <a href="/publications/chen2022fairness.pdf">[pdf]</a></li>
@@ -82,11 +82,15 @@
                 </ul>
                 <h3 id="service">Service</h3>
                 <ul>
-					<li>Junior PC for <a href="https://conf.researchr.org/home/msr-2023">MSR'23</a></li>
+					<li>Invited speaker at the <a href="https://www.ucl.ac.uk/crest/events/2023/mar/63rd-crest-open-workshop-genetic-improvement-and-software-specialisation">63rd CREST Open Workshop</a></li>
+					<li>Co-Chair RENE/NIER Track for <a href="https://conf.researchr.org/home/ssbse-2023">SSBSE'23</a></li>
+					<li>Junior PC for <a href="https://conf.researchr.org/home/msr-2023">MSR'23</a> (Distinguished Reviewer)</li>
 					<li>Shadow PC for <a href="https://conf.researchr.org/home/msr-2022">MSR'22</a></li>
-					<li>Co-reviewer for <a href="https://www.computer.org/csdl/journal/ts">TSE</a></li>
+					<li>Reviewer for <a href="https://www.computer.org/csdl/journal/ts">TSE</a></li>
+					<li>Reviewer for <a href="https://dl.acm.org/journal/tosem">TOSEM</a></li>
+					<li>Reviewer for <a href="https://www.springer.com/journal/10664">EMSE</a></li>
+					<li>Reviewer for <a href="https://jair.org/index.php/jair">JAIR</a></li>
 					<li>Co-reviewer for <a href="https://conf.researchr.org/home/ase-2022">ASE'22</a></li>
-					<li>Co-reviewer for <a href="https://dl.acm.org/journal/tosem">TOSEM</a></li>
 					<li>Co-reviewer for <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a></li>
 					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a>, <a href="https://2022.esec-fse.org/">FSE'22</a></li>
                     <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
