--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </div>
               <div class="col-sm-8 text-left">
                 <h3 id="about">About</h3>
-                <p>I am an ERCIM Research Fellow at <a href="https://www.simula.no/"
+                <p>I am an MSCA Research Fellow at <a href="https://www.simula.no/"
                     target="_blank"> Simula Research Laboratory</a>, supervised by Professor <a href="https://leonmoonen.com/">Leon Moonen</a>.
                 </p>
 				
@@ -82,24 +82,48 @@
                 </ul>
                 <h3 id="service">Service</h3>
                 <ul>
-					<li>Invited speaker at the <a href="https://www.ucl.ac.uk/crest/events/2023/mar/63rd-crest-open-workshop-genetic-improvement-and-software-specialisation">63rd CREST Open Workshop</a></li>
-					<li>Co-Chair RENE/NIER Track for <a href="https://conf.researchr.org/home/ssbse-2023">SSBSE'23</a></li>
-					<li>Junior PC for <a href="https://conf.researchr.org/home/msr-2023">MSR'23</a> (Distinguished Reviewer)</li>
-					<li>Shadow PC for <a href="https://conf.researchr.org/home/msr-2022">MSR'22</a></li>
-					<li>Reviewer for <a href="https://www.computer.org/csdl/journal/ts">TSE</a></li>
-					<li>Reviewer for <a href="https://dl.acm.org/journal/tosem">TOSEM</a></li>
-					<li>Reviewer for <a href="https://www.springer.com/journal/10664">EMSE</a></li>
-					<li>Reviewer for <a href="https://jair.org/index.php/jair">JAIR</a></li>
-					<li>Co-reviewer for <a href="https://conf.researchr.org/home/ase-2022">ASE'22</a></li>
-					<li>Co-reviewer for <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a></li>
-					<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a>, <a href="https://2022.esec-fse.org/">FSE'22</a></li>
-                    <li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
-					<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
-					<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
-					<li>Teaching Assistant COMP0137 Machine Vision</li>
-					<li>Teaching Assistant COMP0066 Introduction to Programming</li>
-					<li>Teaching Assistant COMP0005 Algorithms</li>
-					<li>Co-supervision of MSc student projects (Fairness of Word Embeddings, Genetic Improvement for Python)</li>
+			<li>Reviewer for <a href="https://www.sciencedirect.com/journal/information-and-software-technology">Information and Software Technology</a></li>
+			<li>Reviewer for <a href="https://link.springer.com/journal/43926">Discover Internet of Things</a></li>
+			<li>Reviewer for <a href="https://dl.acm.org/journal/csur">ACM Computing Surveys</a></li>
+			<li>Reviewer for <a href="https://www.computer.org/csdl/magazine/so">IEEE Software</a></li>
+			<li>Reviewer for <a href="https://jmlr.org/tmlr/">TMLR</a></li>
+			<li>Reviewer for <a href="https://cis.ieee.org/publications/ci-magazine">IEEE Computational Intelligence Magazine (CIM)</a></li>
+			<li>Reviewer for <a href="https://dl.acm.org/journal/tkdd">TKDD</a></li>
+			<li>Reviewer for <a href="https://www.computer.org/csdl/journal/ts">TSE</a></li>
+			<li>Reviewer for <a href="https://dl.acm.org/journal/tosem">TOSEM</a></li>
+			<li>Reviewer for <a href="https://www.springer.com/journal/10664">EMSE</a></li>
+			<li>Reviewer for <a href="https://jair.org/index.php/jair">JAIR</a></li>
+
+			<li>Program Committee for <a href="https://conf.researchr.org/home/icse-2026">ICSE'26</a></li>
+			<li>Program Committee for <a href="https://2025.msrconf.org/">MSR'25</a> (Distinguished Reviewer)</li>
+			<li>Program Committee for <a href="https://geneticimprovementofsoftware.com/events/icse2025.html">GI@ICSE'25 </a></li>
+			<li>Program Committee for <a href="https://greensworkshop.github.io/">GREENS'25</a></li>
+			<li>Program Committee for <a href="https://conf.researchr.org/home/icse-2025/finanse-2025">FinanSE'25</a></li>
+			<li>Program Committee for <a href="https://conf.researchr.org/home/internetware-2025">InternetWare'25</a></li>
+			<li>Program Committee for <a href="https://conf.researchr.org/home/issta-2025">ISSTA/ECOOP'25 Tool Demonstrations Track</a></li>
+			<li>Program Committee for <a href="https://fairnessworkshop.com/">Fairness'25</a></li>
+			<li>Program Committee for <a href="https://conf.researchr.org/home/ase-2025">ASE'25</a></li>
+			<li>Program Committee for <a href="https://conf.researchr.org/home/ase-2024">ASE'24</a></li>
+			<li>Program Committee for <a href="https://finanse24.github.io/">FinanSE'24</a></li>
+			<li>Program Committee for <a href="https://conf.researchr.org/home/internetware-2024">InternetWare'24</a> (Distinguished Reviewer)</li>
+			<li>Program Committee for <a href="https://2024.issta.org/">ISSTA/ECOOP'24</a></li>
+
+
+			<li>Editor<a href="https://ause-journal.github.io/23ssbse.html"> Advances in Search-Based Software Engineering </a></li>
+			<li>Invited speaker at the <a href="https://www.ucl.ac.uk/crest/events/2023/mar/63rd-crest-open-workshop-genetic-improvement-and-software-specialisation">63rd CREST Open Workshop</a></li>
+			<li>Co-Chair RENE/NIER Track for <a href="https://conf.researchr.org/home/ssbse-2023">SSBSE'23</a></li>
+			<li>Junior PC for <a href="https://conf.researchr.org/home/msr-2023">MSR'23</a> (Distinguished Reviewer)</li>
+			<li>Shadow PC for <a href="https://conf.researchr.org/home/msr-2022">MSR'22</a></li>
+			<li>Co-reviewer for <a href="https://conf.researchr.org/home/ase-2022">ASE'22</a></li>
+			<li>Co-reviewer for <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a></li>
+			<li>Co-reviewer for <a href="https://2021.esec-fse.org/">FSE'21</a>, <a href="https://2022.esec-fse.org/">FSE'22</a></li>
+				<li>Co-reviewer for <a href="https://saner2020.csd.uwo.ca/index">SANER'20</a></li>
+			<li>Student Volunteer  <a href="https://conf.researchr.org/home/icse-2021">ICSE'21</a></li>
+			<li>Student Volunteer  <a href="https://2020.esec-fse.org/">FSE'20</a></li>
+			<li>Teaching Assistant COMP0137 Machine Vision</li>
+			<li>Teaching Assistant COMP0066 Introduction to Programming</li>
+			<li>Teaching Assistant COMP0005 Algorithms</li>
+			<li>Co-supervision of MSc student projects (Fairness of Word Embeddings, Genetic Improvement for Python, Program repair with LLMs)</li>
                 </ul> 
                 </div>
               </div>
