--- a/index.html
+++ b/index.html
@@ -58,23 +58,31 @@
                 <hr>
                 <h3 id="publications">Publications</h3>
                 <ul>
-					<li>An Exploratory Literature Study on Sharing and Energy Use of Language Models for Source Code (ESEM'23) <a href = "/bibtex/hort2023exploratory.txt" download>[Bibtex]</a> <a href="/publications/hort2023exploratory.pdf">[pdf]</a></li>
-					<li>The EarlyBIRD Catches the Bug: On Exploiting Early Layers of Encoder Models for More Efficient Code Classification (FSE'23) <a href = "/bibtex/grishina2023earlybird.txt" download>[Bibtex]</a> <a href="/publications/grishina2023earlybird.pdf">[pdf]</a></li>
-					<li>Multi-objective Search for Gender-Fair and Semantically Correct Word Embeddings HOP (GECCO'23) <a href = "/bibtex/hort2023hop.txt" download>[Bibtex]</a> <a href="/publications/hort2023hop.pdf">[pdf]</a></li>
-					<li>Multi-objective Search for Gender-Fair and Semantically Correct Word Embeddings (Appl.SoftComput.'23) <a href = "/bibtex/hort2023multi.txt" download>[Bibtex]</a> <a href="/publications/hort2023multi.pdf">[pdf]</a></li>
-					<li>Bias Mitigation for Machine Learning Classifiers: A Comprehensive Survey (arXiv'22) <a href = "/bibtex/hort2022bias.txt" download>[Bibtex]</a> <a href="/publications/hort2022bias.pdf">[pdf]</a></li>
-					<li>Fairness Testing: A Comprehensive Survey and Analysis of Trends (arXiv'22) <a href = "/bibtex/chen2022fairness.txt" download>[Bibtex]</a> <a href="/publications/chen2022fairness.pdf">[pdf]</a></li>
-					<li>Enhanced Fairness Testing via Generating Effective Initial Individual Discriminatory Instances (arXiv'22) <a href = "/bibtex/ma2022enhanced.txt" download>[Bibtex]</a> <a href="/publications/ma2022enhanced.pdf">[pdf]</a></li>
-					
-					
-					<li>An Empirical Study on the Fairness of Pre-trained Word Embeddings (GEBNLP'22) <a href = "/bibtex/SesariGEBNLP22.txt" download>[Bibtex]</a> <a href="/publications/SesariGEBNLP22.pdf">[pdf]</a></li>
-					<li>Py2Cy: A Genetic Improvement Tool To Speed Up Python (GI@GECCO'22) <a href = "/bibtex/ZhongGECCOGI22.txt" download>[Bibtex]</a> <a href="/publications/ZhongGECCOGI22.pdf">[pdf]</a></li>
-					<li>Privileged and Unprivileged Groups: An Empirical Study on the Impact of the Age Attribute on Fairness (Fairware'22) <a href = "/bibtex/hort2022fairware.txt" download>[Bibtex]</a> <a href="/publications/hort2022fairware.pdf">[pdf]</a></li>
-					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination (ASE'22) <a href = "/bibtex/hort2021ase.txt" download>[Bibtex]</a> <a href="/publications/hort2021ase.pdf">[pdf]</a></li>
-					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods (FSE'21) <a href = "/bibtex/hort2021fairea.txt" download>[Bibtex]</a> <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
-					<li>The Effect of Offspring Population Size on NSGA-II: A Preliminary Study (GECCO'21) <a href = "/bibtex/hort2021nsga.txt" download>[Bibtex]</a> <a href="/publications/hort2021nsga.pdf">[pdf]</a></li>
-					<li>A Survey of Performance Optimization for Mobile Applications (TSE'21) <a href = "/bibtex/hort2021tse.txt" download>[Bibtex]</a> <a href="/publications/hort2021tse.pdf">[pdf]</a></li>
-                    <li>Optimising Word Embeddings With Search-Based Approaches (GECCO'20) <a href = "/bibtex/hort2020optimising.txt" download>[Bibtex]</a> <a href="/publications/hort2020optimising.pdf">[pdf]</a></li>
+					<li>Enhanced Fairness Testing via Generating Effective Initial Individual Discriminatory Instances (TOSEM’25) </li>
+					<li>The Art of Repair: Optimizing Iterative Program Repair with Instruction-Tuned Models (EASE’25) <a href=“https://arxiv.org/abs/2505.02931“>[pdf]</a></li>
+					<li>Semantic-Preserving Transformations as Mutation Operators: A Study on Their Effectiveness in Defect Detection (MUTATION’25) <a href=“https://ieeexplore.ieee.org/abstract/document/10962512“>[pdf]</a></li>
+					<li>Codehacks: A Dataset of Adversarial Tests For Competitive Programming Problems Obtained From Codeforces (ICST’25) <a href=“https://ieeexplore.ieee.org/document/10988963“>[pdf]</a></li>
+
+					<li>Bias Mitigation for Machine Learning Classifiers: A Comprehensive Survey (JRC’24) <a href="https://dl.acm.org/doi/full/10.1145/3631326">[pdf]</a></li>
+					<li>Fairness Testing: A Comprehensive Survey and Analysis of Trends (TOSEM’24) <a href="https://dl.acm.org/doi/full/10.1145/3652155">[pdf]</a></li>
+					<li>A Novel Approach for Automatic Program Repair using Round-Trip Translation with Large Language Models (arXiv’24) <a href="https://arxiv.org/abs/2401.07994">[pdf]</a></li>
+					<li>A Comparative Study on Large Language Models for Log Parsing (ESEM’24) <a href="https://dl.acm.org/doi/abs/10.1145/3674805.3686684">[pdf]</a></li>
+					<li>An Exploratory Study on How Non-Determinism in Large Language Models Affects Log Parsing (InteNSE’24) <a href="https://dl.acm.org/doi/abs/10.1145/3643661.3643952">[pdf]</a></li>
+					<li>Search-based Automatic Repair for Fairness and Accuracy in Decision-making Software (EMSE’24) <a href="https://link.springer.com/article/10.1007/s10664-023-10419-3">[pdf]</a></li>
+
+					<li>An Exploratory Literature Study on Sharing and Energy Use of Language Models for Source Code (ESEM'23) <a href="/publications/hort2023exploratory.pdf">[pdf]</a></li>
+					<li>The EarlyBIRD Catches the Bug: On Exploiting Early Layers of Encoder Models for More Efficient Code Classification (FSE'23) <a href="/publications/grishina2023earlybird.pdf">[pdf]</a></li>
+					<li>Multi-objective Search for Gender-Fair and Semantically Correct Word Embeddings HOP (GECCO'23) <a href="/publications/hort2023hop.pdf">[pdf]</a></li>
+					<li>Multi-objective Search for Gender-Fair and Semantically Correct Word Embeddings (Appl.SoftComput.'23) <a href="/publications/hort2023multi.pdf">[pdf]</a></li>
+
+					<li>An Empirical Study on the Fairness of Pre-trained Word Embeddings (GEBNLP'22) <a href="/publications/SesariGEBNLP22.pdf">[pdf]</a></li>
+					<li>Py2Cy: A Genetic Improvement Tool To Speed Up Python (GI@GECCO'22) <a href="/publications/ZhongGECCOGI22.pdf">[pdf]</a></li>
+					<li>Privileged and Unprivileged Groups: An Empirical Study on the Impact of the Age Attribute on Fairness (Fairware'22) <a href="/publications/hort2022fairware.pdf">[pdf]</a></li>
+					<li>Did You Do Your Homework? Raising Awareness on Software Fairness and Discrimination (ASE'22) <a href="/publications/hort2021ase.pdf">[pdf]</a></li>
+					<li>Fairea: A Model Behaviour Mutation Approach to Benchmarking Bias Mitigation Methods (FSE'21) <a href="/publications/hort2021fairea.pdf">[pdf]</a></li>
+					<li>The Effect of Offspring Population Size on NSGA-II: A Preliminary Study (GECCO'21) <a href="/publications/hort2021nsga.pdf">[pdf]</a></li>
+					<li>A Survey of Performance Optimization for Mobile Applications (TSE'21) <a href="/publications/hort2021tse.pdf">[pdf]</a></li>
+                    <li>Optimising Word Embeddings With Search-Based Approaches (GECCO'20) <a href="/publications/hort2020optimising.pdf">[pdf]</a></li>
                 </ul>
 				<h3 id="publications">Master Thesis</h3>
                 <ul>
