--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 <h3 id="publications">Publications</h3>
                 <ul>
 					<li>Enhanced Fairness Testing via Generating Effective Initial Individual Discriminatory Instances (TOSEM’25) </li>
-					<li>The Art of Repair: Optimizing Iterative Program Repair with Instruction-Tuned Models (EASE’25) <a href=“https://arxiv.org/abs/2505.02931“>[pdf]</a></li>
-					<li>Semantic-Preserving Transformations as Mutation Operators: A Study on Their Effectiveness in Defect Detection (MUTATION’25) <a href=“https://ieeexplore.ieee.org/abstract/document/10962512“>[pdf]</a></li>
-					<li>Codehacks: A Dataset of Adversarial Tests For Competitive Programming Problems Obtained From Codeforces (ICST’25) <a href=“https://ieeexplore.ieee.org/document/10988963“>[pdf]</a></li>
+					<li>The Art of Repair: Optimizing Iterative Program Repair with Instruction-Tuned Models (EASE’25) <a href="https://arxiv.org/abs/2505.02931">[pdf]</a></li>
+					<li>Semantic-Preserving Transformations as Mutation Operators: A Study on Their Effectiveness in Defect Detection (MUTATION’25) <a href="https://ieeexplore.ieee.org/abstract/document/10962512">[pdf]</a></li>
+					<li>Codehacks: A Dataset of Adversarial Tests For Competitive Programming Problems Obtained From Codeforces (ICST’25) <a href="https://ieeexplore.ieee.org/document/10988963">[pdf]</a></li>
 
 					<li>Bias Mitigation for Machine Learning Classifiers: A Comprehensive Survey (JRC’24) <a href="https://dl.acm.org/doi/full/10.1145/3631326">[pdf]</a></li>
 					<li>Fairness Testing: A Comprehensive Survey and Analysis of Trends (TOSEM’24) <a href="https://dl.acm.org/doi/full/10.1145/3652155">[pdf]</a></li>
